handle exceptions and reformat responses