@@ -1,12 +1,15 @@
 package com.example.library.config;
 
 import com.example.library.entity.User;
+import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
+@Getter
 public class CustomUserDetails implements UserDetails {
 
     private final User user;
@@ -17,8 +20,11 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // Assuming role is a string like "ADMIN" or "USER"
-        return List.of(() -> "ROLE_" + user.getRole());  // Mapping role to authority
+        // Ensure user role is not null and prefix it with "ROLE_"
+        if (user.getRole() != null) {
+            return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
+        }
+        throw new IllegalStateException("User role is not defined");
     }
 
     @Override
@@ -33,25 +39,22 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public boolean isAccountNonExpired() {
-        return true;  // Can be customized if you have expiration logic
+        return true; // Customize if account expiration logic exists
     }
 
     @Override
     public boolean isAccountNonLocked() {
-        return true;  // Can be customized if you have lock logic
+        return true; // Customize if account lock logic exists
     }
 
     @Override
     public boolean isCredentialsNonExpired() {
-        return true;  // Can be customized if you have expiration logic
+        return true;
     }
 
     @Override
     public boolean isEnabled() {
-        return true;  // Can be customized if you want to disable accounts
+        return true; // Customize if account enable/disable logic exists
     }
 
-    public User getUser() {
-        return user;
-    }
 }
